[package]
name = "steam-resolve-vanity"
version = "0.2.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/icewind1991/steam-resolve-vanity"
description = "Resolve steam vanity urls"

[dependencies]
steamid-ng = "0.3.4"
reqwest = { version = "0.10.4", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
dotenv = "0.15"
tokio = { version = "0.2", features = ["macros"] }