[package]
name = "steam-resolve-vanity"
version = "0.4.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/icewind1991/steam-resolve-vanity"
description = "Resolve steam vanity urls"

[dependencies]
steamid-ng = "1"
reqwest = { version = "0.11", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[features]
default = ["default-tls"]
default-tls = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dev-dependencies]
dotenv = "0.15"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }